language/move-lang/tests/move_check/parser/hexstring_bad_value2.exp
error: 

   ┌── tests/move_check/parser/hexstring_bad_value2.move:4:16 ───
   │
 4 │         x"bcdefg"
   │                ^ Invalid hexadecimal character: 'g'
   │

